--- a/register.html
+++ b/register.html
@@ -44,7 +44,7 @@
 
       <footer class="footerClass headerandfooter">
         <p>Developed by Lalitha</p>
-        <a class="achr" href="#">View Code</a>
+        <a class="achr" href="https://github.com/p-lalitha/RegisterNLogin.git">View Code</a>
       </footer>
     </div>
   </body>
